# VDS-Guardian

./: .gitignore  AGENTS.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: deploy_commands.rs  docker_commands.rs  job_commands.rs  job_registry.rs  lib.rs  main.rs  plan_commands.rs  profile_commands.rs  profile_delete.rs  remote_browser_commands.rs  replacement_commands.rs  repository_commands.rs  restore_commands.rs  signing_commands.rs
apps/desktop/src-tauri/src/repository_commands/: management.rs  recovery.rs
apps/desktop/src-tauri/src/restore_commands/: inspection.rs
crates/guardian-archive/: Cargo.toml
crates/guardian-archive/src/: cancellation.rs  lib.rs  writer.rs  zstd_file.rs
crates/guardian-archive/tests/: archive_extraction.rs  archive_inspection.rs  archive_writer.rs
crates/guardian-capture/: Cargo.toml
crates/guardian-capture/src/: disk_space.rs  embedded_database.rs  lib.rs
crates/guardian-capture/tests/: clean_room_drill.rs  pipeline.rs  support.rs
crates/guardian-capture/tests/clean_room_drill/: cancellation.rs  capture_cancellation.rs  deploy_second_payload_failure.rs  disk_exhaustion.rs  host_key_rejection.rs
crates/guardian-capture/tests/support/: cancellation_fixture.rs  failure_backup.rs  hostile_archive_backup.rs  recovery.rs
crates/guardian-capture/tests/support/recovery/: adversarial.rs  cli.rs
crates/guardian-cli/: Cargo.toml
crates/guardian-cli/src/: credential.rs  deploy.rs  lib.rs  main.rs  profile.rs  recovery.rs  restore.rs  secret_store.rs  vault.rs
crates/guardian-cli/src/recovery/: bundle.rs  output.rs  parser.rs  tests.rs
crates/guardian-cli/src/recovery/bundle/: tests.rs
crates/guardian-cli/src/recovery/parser/: tests.rs
crates/guardian-configuration/: Cargo.toml
crates/guardian-configuration/src/: lib.rs  plan_store.rs  repository_store.rs  storage.rs
crates/guardian-configuration/tests/: registries.rs
crates/guardian-core/: Cargo.toml
crates/guardian-core/src/: archive.rs  audit.rs  cancellation.rs  capture.rs  capture_selection.rs  database.rs  database_connection.rs  deploy.rs  docker.rs  embedded_database.rs  enroll_profile.rs  host_trust.rs  identifiers.rs  job_registry.rs  lib.rs  manifest.rs  plan.rs  preflight.rs  profile.rs  profile_port.rs  remote_browser.rs  replace.rs  restore.rs  retention.rs  secret.rs  signature.rs  source_layout.rs  state.rs  status.rs  storage.rs
crates/guardian-core/tests/: archive_paths.rs  capture_plan.rs  capture_port.rs  capture_selection.rs  capture_use_case.rs  database_connection.rs  database_preflight.rs  deploy_plan.rs  docker_inventory.rs  embedded_database_capture_use_case.rs  manifest_golden.rs  preflight.rs  profiles.rs  remote_browser.rs  replacement_plan.rs  restore_plan.rs
crates/guardian-core/tests/fixtures/: hostile-archive-paths.json  manifest-v1.json  manifest-v2.json
crates/guardian-database/: Cargo.toml
crates/guardian-database/src/: lib.rs
crates/guardian-database/tests/: probe.rs
crates/guardian-deploy/: Cargo.toml
crates/guardian-deploy/src/: lib.rs  replacement.rs
crates/guardian-docker/: Cargo.toml
crates/guardian-docker/src/: lib.rs
crates/guardian-docker/tests/: inspect.rs
crates/guardian-encryption/: Cargo.toml
crates/guardian-encryption/src/: lib.rs  recovery_bundle.rs
crates/guardian-local-repository/: Cargo.toml
crates/guardian-local-repository/src/: core_adapter.rs  error.rs  filesystem.rs  inventory.rs  lib.rs  process_lock.rs  recovery_bundle.rs  repository.rs  retention.rs  retention_journal.rs  signature_file.rs  staging.rs  verification.rs
crates/guardian-local-repository/src/repository/: audit.rs  credential.rs  recovery.rs  restore.rs
crates/guardian-local-repository/src/repository/restore/: crypto.rs
crates/guardian-local-repository/tests/: deploy.rs  local_repository.rs  restore.rs  retention.rs
crates/guardian-local-repository/tests/support/: mod.rs
crates/guardian-mcp/: Cargo.toml
crates/guardian-mcp/src/: capture.rs  config.rs  deploy.rs  discovery.rs  lib.rs  main.rs  restore.rs  secret_store.rs
crates/guardian-os-keyring/: Cargo.toml
crates/guardian-os-keyring/src/: lib.rs
crates/guardian-profile-store/: Cargo.toml
crates/guardian-profile-store/src/: lib.rs
crates/guardian-profile-store/tests/: profiles.rs
crates/guardian-signing/: Cargo.toml
crates/guardian-signing/src/: enrollment.rs  filesystem.rs  lib.rs  public.rs  verifier.rs
crates/guardian-signing/tests/: enrollment.rs
crates/guardian-ssh/: Cargo.toml
crates/guardian-ssh/src/: lib.rs  process.rs  push.rs  remote_browser.rs  secret_identity.rs  stream.rs
crates/guardian-ssh/tests/: pinned_capture.rs  pinned_deploy.rs
crates/guardian-vault/: Cargo.toml
crates/guardian-vault/src/: filesystem.rs  init.rs  lib.rs  master_key.rs  public.rs
crates/guardian-vault/tests/: vault.rs
docs/: ARCHITECTURE.md  BACKUP_FORMAT.md  DEVELOPMENT_PLAN.md  OPERATIONS_RUNBOOK.md  PRODUCT_REQUIREMENTS.md  RELEASE_SIGNING.md  RETENTION.md  SECURITY_MODEL.md  SIGNING_IDENTITY.md  SSH_CAPTURE.md  WINDOWS_DESKTOP_SMOKE_TEST.md
docs/adr/: 0001-platform-and-stack.md  0002-secret-and-server-access.md  0003-database-dump-version-compatibility.md  0004-payload-encryption-envelope.md  0005-embedded-database-snapshot-adapter.md  0006-headless-secret-vault.md  0007-remote-deploy-to-a-new-vds.md  0008-docker-mount-capture-strategies.md  0009-ssh-agent-backed-identities.md  0010-operator-triggered-cancellation.md  0011-archive-path-validation-hardening.md  0012-mcp-server-for-headless-and-agent-access.md  (+4 more)
scripts/: doctor.mjs  test-clean-room-drill.mjs  test-ssh-integration.mjs  verify-release-artifact.ps1  verify.mjs
(+68 files in other folders)
