[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/guardian-cli",
  "crates/guardian-core",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ProAnima Studio"]
repository = "https://github.com/ProAnima/VDS-Guardian"

[workspace.dependencies]
guardian-core = { path = "crates/guardian-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
