[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/guardian-cli",
  "crates/guardian-core",
  "crates/guardian-local-repository",
  "crates/guardian-os-keyring",
  "crates/guardian-signing",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ProAnima Studio"]
repository = "https://github.com/ProAnima/VDS-Guardian"

[workspace.dependencies]
guardian-core = { path = "crates/guardian-core" }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
fs2 = "0.4"
keyring = { version = "4.1", default-features = false, features = ["v1"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zeroize = "1.8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
