[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/guardian-cli",
  "crates/guardian-archive",
  "crates/guardian-encryption",
  "crates/guardian-capture",
  "crates/guardian-core",
  "crates/guardian-configuration",
  "crates/guardian-database",
  "crates/guardian-deploy",
  "crates/guardian-docker",
  "crates/guardian-profile-store",
  "crates/guardian-local-repository",
  "crates/guardian-mcp",
  "crates/guardian-os-keyring",
  "crates/guardian-signing",
  "crates/guardian-ssh",
  "crates/guardian-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["ProAnima Studio"]
repository = "https://github.com/ProAnima/VDS-Guardian"

[workspace.dependencies]
guardian-core = { path = "crates/guardian-core" }
guardian-archive = { path = "crates/guardian-archive" }
guardian-encryption = { path = "crates/guardian-encryption" }
guardian-local-repository = { path = "crates/guardian-local-repository" }
guardian-ssh = { path = "crates/guardian-ssh" }
base64 = "0.22"
aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
tar = "0.4"
ed25519-dalek = { version = "2.2", features = ["rand_core", "zeroize"] }
fs2 = "0.4"
keyring = { version = "4.1", default-features = false, features = ["v1"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
zeroize = "1.8"
zstd = "0.13"
ctrlc = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util"] }
uuid = { version = "1", features = ["v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
