[package]
name = "guardian-capture"
description = "Verified staging pipeline for VDS Guardian capture adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-archive.workspace = true
guardian-core.workspace = true
guardian-local-repository.workspace = true
guardian-ssh.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
