[package]
name = "guardian-capture"
description = "Verified staging pipeline for VDS Guardian capture adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-archive.workspace = true
guardian-core.workspace = true
guardian-local-repository.workspace = true
guardian-ssh.workspace = true
fs2.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
guardian-deploy = { path = "../guardian-deploy" }
guardian-vault = { path = "../guardian-vault" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
