[package]
name = "guardian-cli"
description = "Headless command-line interface for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-core.workspace = true
guardian-os-keyring = { path = "../guardian-os-keyring" }
guardian-signing = { path = "../guardian-signing" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
