[package]
name = "guardian-cli"
description = "Headless command-line interface for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-configuration = { path = "../guardian-configuration" }
guardian-core.workspace = true
guardian-deploy = { path = "../guardian-deploy" }
guardian-encryption.workspace = true
guardian-local-repository.workspace = true
guardian-os-keyring = { path = "../guardian-os-keyring" }
guardian-profile-store = { path = "../guardian-profile-store" }
guardian-signing = { path = "../guardian-signing" }
guardian-ssh.workspace = true
guardian-vault = { path = "../guardian-vault" }
base64.workspace = true
ctrlc.workspace = true
fs2.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
