[package]
name = "guardian-core"
description = "Domain model and use cases for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true

