[package]
name = "guardian-database"
description = "Read-only database dump-tool discovery adapters."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-core.workspace = true
guardian-ssh.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
