[package]
name = "guardian-deploy"
description = "Composition root for pushing a sealed backup onto a new/clean VDS over SSH."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-archive.workspace = true
guardian-core.workspace = true
guardian-local-repository.workspace = true
guardian-ssh.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
tempfile.workspace = true

[lints]
workspace = true
