[package]
name = "guardian-encryption"
description = "Authenticated payload encryption adapter for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aes-gcm.workspace = true
argon2.workspace = true
rand_core.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
