[package]
name = "guardian-local-repository"
description = "Fail-closed local filesystem repository adapter for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
guardian-archive.workspace = true
guardian-core.workspace = true
guardian-encryption.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[dev-dependencies]
zstd.workspace = true

[lints]
workspace = true
