[package]
name = "guardian-signing"
description = "Ed25519 backup-node signing identity for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
guardian-core.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[lints]
workspace = true
