[package]
name = "guardian-ssh"
description = "Pinned system OpenSSH adapter for read-only VDS capture."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
guardian-core.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
base64.workspace = true

[lints]
workspace = true
