[package]
name = "guardian-vault"
description = "Encrypted local file vault fallback for headless nodes without a usable OS credential store."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
guardian-core.workspace = true
guardian-encryption.workspace = true
fs2.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
