[package]
name = "vds-guardian-desktop"
description = "Native desktop shell for VDS Guardian."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "vds_guardian_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
guardian-core.workspace = true
tauri = { version = "2", features = [] }

[lints]
workspace = true

